tests/errors/type_check/build/struct_duplicate_field_name.sim

        struct S {
            x: i64
            x: bool
        }
        